--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
 #         TODO: add version to a .nvmrc or at least a variable
-          node-version: 16.13.x
+          node-version: 18.12.1
           cache: npm
       - name: Install
         run: npm ci
