--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,3 +18,9 @@ jobs:
         run: npm ci
       - name: Build
         run: npm run build
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: lib-${{ github.sha }}
+          path: ./dist
+          if-no-files-found: error
