CI: Remove node modules cache and instead use prefer-offline

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,15 +14,8 @@ jobs:
           #         TODO: add version to a .nvmrc or at least a variable
           node-version: 18.12.1
           cache: npm
-      - name: Cache node modules
-        id: cache-packages
-        uses: actions/cache@v3
-        with:
-          path: ./node_modules
-          key: ${{ hashFiles('package-lock.json') }}
       - name: Install
-        if: ${{ steps.cache-packages.outputs.cache-hit != 'true' }}
-        run: npm ci --omit=dev
+        run: npm ci --omit=dev --prefer-offline
       - name: Build
         run: npm run build
       - name: Upload artifact
