--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
   },
   "type": "module",
   "scripts": {
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "vite build",
     "test:unit": "vitest",
-    "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
@@ -22,6 +21,9 @@
   },
   "dependencies": {
     "vite-plugin-css-injected-by-js": "^3.4.0",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@tsconfig/node20": "^20.1.2",
+    "@vue/tsconfig": "^0.5.1",
     "vue": "^3.4.21"
   },
   "devDependencies": {
@@ -34,14 +36,11 @@
     "@storybook/test": "^8.0.0",
     "@storybook/vue3": "^8.0.0",
     "@storybook/vue3-vite": "^8.0.0",
-    "@tsconfig/node20": "^20.1.2",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.11.25",
-    "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.4",
-    "@vue/tsconfig": "^0.5.1",
     "eslint": "^8.49.0",
     "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-vue": "^9.17.0",
