--- a/.github/workflows/type-check.yml
+++ b/.github/workflows/type-check.yml
@@ -3,7 +3,7 @@ name: 'Run tests'
 on: [push, workflow_dispatch]
 
 jobs:
-  run-tests:
+  type-check:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -16,5 +16,5 @@ jobs:
           cache: npm
       - name: Install
         run: npm ci --prefer-offline
-      - name: Run tests
-        run: npm run test:unit
+      - name: Type check
+        run: npm run type-check
