CI: Moves naming from build workflow to CI workflow

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,3 +13,5 @@ jobs:
   build-storybook:
     needs: [tests, type-check]
     uses: ./.github/workflows/build-storybook.yml
+    with:
+      artifact-name: "storybook-${{ github.head_ref }}"
