CI: Adds variable to build workflow

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,6 +10,8 @@ jobs:
   build:
     needs: [tests, type-check]
     uses: ./.github/workflows/build.yml
+    with:
+      artifact-name: "lib-${{ github.head_ref }}"
   build-storybook:
     needs: [tests, type-check]
     uses: ./.github/workflows/build-storybook.yml
