CI: Adds deployment to GitHub Pages

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -20,3 +20,18 @@ jobs:
     uses: ./.github/workflows/build-storybook.yml
     with:
       artifact-name: "storybook-latest"
+  deploy-page:
+    needs: build-storybook
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+        with:
+          artifact_name: "storybook-latest"
