--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
       "require": "./dist/dsocto.cjs"
     }
   },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
+  "repository": "https://github.com/octo-technology/Design-System---Marque-Blanche.git",
   "type": "module",
   "scripts": {
     "build": "vite build",
