--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -22,19 +22,9 @@ jobs:
       artifact-name: "storybook-latest"
   deploy-page:
     needs: build-storybook
-    permissions:
-      pages: write
-      id-token: write
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
-        with:
-          artifact_name: "storybook-latest"
+    uses: ./.github/workflows/deploy-storybook.yml
+    with:
+      artifact_name: "storybook-latest"
   publish-package:
     needs: build
     uses: ./.github/workflows/publish-package.yml
