--- a/.github/workflows/build-storybook.yml
+++ b/.github/workflows/build-storybook.yml
@@ -26,8 +26,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v4
         with:
-          #         TODO: add version to a .nvmrc or at least a variable
-          node-version: 18.12.1
+          node-version-file: '.nvmrc'
           cache: npm
       - name: Install
         run: npm ci --prefer-offline
