--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,8 +26,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v4
         with:
-          #         TODO: add version to a .nvmrc or at least a variable
-          node-version: 18.12.1
+          node-version-file: '.nvmrc'
           cache: npm
       - name: Install
         run: npm ci --omit=dev --prefer-offline
@@ -36,7 +35,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          # TODO (GAFI 19-03-2024): Add variable for this to avoid using ref when not provided
           name: ${{ env.ARTIFACT_NAME }}
           path: ./dist
           if-no-files-found: error
