--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "vite-plugin-css-injected-by-js": "^3.4.0",
     "@vitejs/plugin-vue": "^5.0.4",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@tsconfig/node20": "^20.1.2",
     "@vue/tsconfig": "^0.5.1",
     "vue": "^3.4.21"
